# wiz-hooks

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
hooks/: wiz_iac.py
